--- a/et/w_admin/templates/login.html
+++ b/et/w_admin/templates/login.html
@@ -46,18 +46,19 @@
 
                                     <div class="space-6"></div>
 
-                                    <form>
+                                    <form method="post">
                                         <fieldset>
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="用户名"/>
+															<input type="text" name="user_name" class="form-control"
+                                                                   placeholder="用户名"/>
 															<i class="icon-user"></i>
 														</span>
                                             </label>
 
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control"
+															<input type="password" name="password" class="form-control"
                                                                    placeholder="密码"/>
 															<i class="icon-lock"></i>
 														</span>
@@ -66,7 +67,7 @@
                                             <div class="space"></div>
 
                                             <div class="clearfix">
-                                                <button type="button"
+                                                <button type="submit"
                                                         class="width-35 pull-right btn btn-sm btn-primary">
                                                     <i class="icon-key"></i>
                                                     登录
