--- a/et/w_admin/templates/base.html
+++ b/et/w_admin/templates/base.html
@@ -230,6 +230,7 @@
 
 <script src="/static/js/ace-elements.min.js"></script>
 <script src="/static/js/ace.min.js"></script>
+<script src="/static/js/jquery.form.js"></script>
 {% block footer %}{% end %}
 </body>
 
