--- a/et/w_admin/templates/login.html
+++ b/et/w_admin/templates/login.html
@@ -46,7 +46,7 @@
 
                                     <div class="space-6"></div>
 
-                                    <form method="post">
+                                    <form id="login_form" method="post">
                                         <fieldset>
                                             <label class="block clearfix">
 														<span class="block input-icon input-icon-right">
@@ -86,5 +86,46 @@
         </div><!-- /.row -->
     </div>
 </div><!-- /.main-container -->
+<script src="/static/js/jquery-2.0.3.min.js"></script>
+<script src="/static/js/jquery.form.js"></script>
+<script src="/static/js/jquery.validate.min.js"></script>
+<script type="text/javascript">
+    $(function () {
+        $('#login_form').validate({
+            rules: {
+                user_name: {
+                    required: true
+                },
+                password: {
+                    required: true
+                }
+            },
+            messages: {
+                user_name: {
+                    required: '请输入用户名'
+                },
+                password: {
+                    required: '请输入密码'
+                }
+            },
+            submitHandler: function (form) {
+                $(form).ajaxSubmit({
+                    success: function (resp) {
+                        if (resp.status === 0) {
+                            var redirect_url = resp.redirect ? resp.redirect : '/';
+                            window.location.href = redirect_url;
+
+                        } else {
+                            alert(resp.msg);
+                        }
+                    },
+                    error: function () {
+                        alert('登录请求失败，请联系技术部！')
+                    }
+                });
+            }
+        });
+    });
+</script>
 </body>
 </html>
