--- a/et/w_admin/templates/base.html
+++ b/et/w_admin/templates/base.html
@@ -219,7 +219,7 @@
 <!-- basic scripts -->
 
 
-<script src="/static/js/jquery-2.0.3.min.js"></script>
+<script src="/static/js/jquery-2.2.0.js"></script>
 <script src="/static/js/ace-extra.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/typeahead-bs2.min.js"></script>
