--- a/et/w_admin/templates/login.html
+++ b/et/w_admin/templates/login.html
@@ -86,7 +86,7 @@
         </div><!-- /.row -->
     </div>
 </div><!-- /.main-container -->
-<script src="/static/js/jquery-2.0.3.min.js"></script>
+<script src="/static/js/jquery-2.2.0.js"></script>
 <script src="/static/js/jquery.form.js"></script>
 <script src="/static/js/jquery.validate.min.js"></script>
 <script type="text/javascript">
