--- a/et/w_admin/templates/blank.html
+++ b/et/w_admin/templates/blank.html
@@ -7,16 +7,16 @@
 
     <!-- basic styles -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css" />
     
     <!-- page specific plugin styles -->
 
     <!-- ace styles -->
 
-    <link rel="stylesheet" href="css/ace.min.css" />
-    <link rel="stylesheet" href="css/ace-rtl.min.css" />
-    <link rel="stylesheet" href="css/ace-skins.min.css" />
+    <link rel="stylesheet" href="/static/css/ace.min.css" />
+    <link rel="stylesheet" href="/static/css/ace-rtl.min.css" />
+    <link rel="stylesheet" href="/static/css/ace-skins.min.css" />
 
     <!-- inline styles related to this page -->
 
@@ -280,17 +280,17 @@
     <!-- basic scripts -->
 
 
-    <script src="js/jquery-2.0.3.min.js"></script>
-    <script src="js/ace-extra.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/typeahead-bs2.min.js"></script>
+    <script src="/static/js/jquery-2.2.0.js"></script>
+    <script src="/static/js/ace-extra.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/typeahead-bs2.min.js"></script>
 
     <!-- page specific plugin scripts -->
 
     <!-- ace scripts -->
 
-    <script src="js/ace-elements.min.js"></script>
-    <script src="js/ace.min.js"></script>
+    <script src="/static/js/ace-elements.min.js"></script>
+    <script src="/static/js/ace.min.js"></script>
 </body>
 
 </html>
