--- a/et/w_admin/templates/__left_menu.html
+++ b/et/w_admin/templates/__left_menu.html
@@ -42,15 +42,8 @@
                 <span class="menu-text"> 控制台 </span>
             </a>
         </li>
-        {% for menu in bag.menus %}
-        <li>
-            <a href="">
-                <i class="icon-desktop">
-                </i>
-                <span class="menu-text">{{menu.name}}</span>
-            </a>
-        </li>
-        {% end %}
+        {% import config %}
+        {% module MenuItem(config.primary_menu_level, 0) %}
     </ul>
     <!-- /.nav-list -->
 
