添加部门默认菜单和登出功能

--- a/et/w_admin/templates/top.html
+++ b/et/w_admin/templates/top.html
@@ -21,7 +21,7 @@
 
 <div class="topright">
     <ul>
-        <li><a href="login.html" target="_parent">退出</a></li>
+        <li><a href="/logout" target="_parent">退出</a></li>
     </ul>
 
     <div class="user">
