登录显示用户名，通用全选js扩展

--- a/et/w_admin/templates/base.html
+++ b/et/w_admin/templates/base.html
@@ -21,6 +21,7 @@
 </div>
 
 <script src="/static/js/jquery-2.2.0.js"></script>
+<script src="/static/js/admin.js"></script>
 {% block footer %}{% end %}
 </body>
 </html>
