--- a/et/w_admin/templates/top.html
+++ b/et/w_admin/templates/top.html
@@ -25,9 +25,9 @@
     </ul>
 
     <div class="user">
-        <span>admin</span>
-        <i>消息</i>
-        <b>5</b>
+        <span>{{ bag.display_name }}</span>
+        <!--<i>消息</i>-->
+        <!--<b>5</b>-->
     </div>
 
 </div>
