添加编辑菜单页面，自定义制作下拉菜单

--- a/et/w_admin/templates/menu_list.html
+++ b/et/w_admin/templates/menu_list.html
@@ -45,7 +45,9 @@
         <td>{{ menu.parent.name }}</td>
         <td>{{ menu.url }}</td>
         <td>{{ menu.order }}</td>
-        <td><a href="#" class="tablelink">查看</a> <a href="#" class="tablelink"> 删除</a></td>
+        <td>
+            <a href="/menu_edit/{{ menu.id }}" class="tablelink">编辑</a>
+        </td>
     </tr>
     {% end %}
     </tbody>
