--- a/et/w_admin/static/css/style.css
+++ b/et/w_admin/static/css/style.css
@@ -544,7 +544,7 @@ h2 {
 }
 
 .toolbar li a img {
-    float:left;
+    float: left;
     margin-right: 5px;
     margin-top: 5px;
 }
@@ -1006,7 +1006,7 @@ h2 {
     overflow: hidden;
 }
 
-.btn {
+/*.btn {
     width: 137px;
     height: 35px;
     background: url(/static/images/btnbg.png) no-repeat;
@@ -1014,7 +1014,7 @@ h2 {
     font-weight: bold;
     color: #fff;
     cursor: pointer;
-}
+}*/
 
 /*tip*/
 .tip {
@@ -1583,4 +1583,61 @@ h2 {
     cursor: pointer;
     border-radius: 3px;
     behavior: url(/static/js/pie.htc);
+}
+
+.dropdown {
+    width: 150px;
+}
+
+.dropdown .btn {
+    position: relative;
+    width: 100%;
+    display: block;
+    background-color: #fff;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown .btn:hover {
+    background-color: #eee;
+}
+
+.dropdown ul {
+    display: inline-block;
+    position: absolute;
+    z-index: 10;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    background-color: #fff;
+    box-sizing: border-box;
+}
+
+.dropdown ul li {
+    padding: 5px 10px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.dropdown ul li:hover{
+    background-color: #eeeeee;
+}
+
+span.triangle:after {
+    content: '';
+    height: 0;
+    width: 0;
+    border: 5px solid transparent;
+    border-top: 5px solid #000;
+    position: absolute;
+    top: 40%;
+    right: 10%;
 }
