--- a/et/w_admin/templates/menu_edit.html
+++ b/et/w_admin/templates/menu_edit.html
@@ -29,13 +29,16 @@
         <li>
             <label>父菜单</label>
             <div class="dropdown">
-                <button class="btn">请选择<span class="triangle"></span></button>
+                <button class="dropdown-btn">
+                    <span class="dropdown-text">请选择</span>
+                    <span class="triangle"></span>
+                </button>
                 <ul>
-                    <li>item1</li>
-                    <li>item2</li>
-                    <li>item3</li>
-                    <li>item4</li>
-                    <li>item5</li>
+                    <li value="1">选项1</li>
+                    <li value="2" item-selected>选项2</li>
+                    <li value="3">选项3</li>
+                    <li value="4">选项4</li>
+                    <li value="5">选项5</li>
                 </ul>
             </div>
         </li>
