--- a/et/w_admin/static/css/style.css
+++ b/et/w_admin/static/css/style.css
@@ -1006,7 +1006,7 @@ h2 {
     overflow: hidden;
 }
 
-/*.btn {
+.btn {
     width: 137px;
     height: 35px;
     background: url(/static/images/btnbg.png) no-repeat;
@@ -1014,7 +1014,7 @@ h2 {
     font-weight: bold;
     color: #fff;
     cursor: pointer;
-}*/
+}
 
 /*tip*/
 .tip {
@@ -1587,9 +1587,10 @@ h2 {
 
 .dropdown {
     width: 150px;
+    display: inline-block;
 }
 
-.dropdown .btn {
+.dropdown .dropdown-btn {
     position: relative;
     width: 100%;
     display: block;
@@ -1600,21 +1601,17 @@ h2 {
     cursor: pointer;
 }
 
-.dropdown {
-    display: inline-block;
-}
-
-.dropdown .btn:hover {
+.dropdown .dropdown-btn:hover {
     background-color: #eee;
 }
 
 .dropdown ul {
-    display: inline-block;
+    display: none;
     position: absolute;
     z-index: 10;
     list-style-type: none;
-    padding: 0;
-    margin: 0;
+    padding: 0 20px 0;
+    margin: 1px 0 0 0;
     border: 1px solid #ccc;
     border-radius: 2px;
     background-color: #fff;
@@ -1622,13 +1619,12 @@ h2 {
 }
 
 .dropdown ul li {
-    padding: 5px 10px;
+    padding: 3px 0 3px;
     cursor: pointer;
-    box-sizing: border-box;
 }
 
-.dropdown ul li:hover{
-    background-color: #eeeeee;
+.dropdown ul li[item-selected] {
+    font-weight: bold;
 }
 
 span.triangle:after {
