--- a/et/w_admin/templates/base.html
+++ b/et/w_admin/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}易思汇后台管理系统{% end %}</title>
+    <link href="/static/css/select.css" rel="stylesheet" type="text/css"/>
     <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
     {% block header %}{% end %}
 </head>
@@ -21,6 +22,9 @@
 </div>
 
 <script src="/static/js/jquery-2.2.0.js"></script>
+<script src="/static/js/select-ui.min.js"></script>
+<script src="/static/js/jquery.form.js"></script>
+<script src="/static/js/jquery.validate.min.js"></script>
 <script src="/static/js/admin.js"></script>
 {% block footer %}{% end %}
 </body>
