--- a/et/w_admin/templates/menu_edit.html
+++ b/et/w_admin/templates/menu_edit.html
@@ -5,9 +5,8 @@
 {% end %}
 
 {% block main %}
-<form method="post">
+<form id="menu_form" method="post">
     <div class="formbody">
-
         <div class="formtitle"><span>菜单编辑</span></div>
 
         <ul class="forminfo">
@@ -29,11 +28,12 @@
             </li>
             <li>
                 <label>父菜单</label>
-                <select id="parent_menu" name="parent_menu" data-valField="id" data-txtField="display_name">
-                    {% for pm in bag.parent_menus %}
-                    <option value="{{ pm.id }}">{{ pm.display_name }}</option>
-                    {% end %}
-                </select>
+                <div class="vocation">
+                    <select id="parent_menu" name="parent_menu">
+                        {% for pm in bag.parent_menus %}
+                        <option value="{{ pm.id }}">{{ pm.display_name }}</option>
+                        {% end %}
+                    </select></div>
             </li>
             <li>
                 <label>url</label>
@@ -49,6 +49,7 @@
             </li>
         </ul>
     </div>
+    <input type="hidden" name="menu_id" value="{{ bag.menu.id }}">
 </form>
 </div>
 {% end %}
@@ -56,8 +57,9 @@
 {% block footer %}
 <script type="text/javascript">
     $(function () {
-        var parent_menus_ddl = $('#parent_menu').dropdown();
+        $('#parent_menu').uedSelect();
 
+        //更改级别重新加载父菜单
         $('input[name=level]').blur(function () {
             var self = $(this);
             var level = self.val();
@@ -70,7 +72,12 @@
                 },
                 success: function (resp) {
                     if (resp.status === 0) {
-                        parent_menus_ddl.load(resp.data);
+                        var parent_menu = $('#parent_menu');
+                        parent_menu.empty();
+                        $('<option>').val('').text('请选择').appendTo(parent_menu);
+                        $.each(resp.data, function (index, item) {
+                            $('<option>').val(item.id).text(item.display_name).appendTo(parent_menu);
+                        });
                     } else {
                         alert(resp.msg);
                     }
@@ -80,7 +87,76 @@
                 }
             });
         });
-    });
 
+
+        //表单验证
+        $('#menu_form').validate({
+            errorElement: 'p',
+            errorClass: 'valid-error',
+            rules: {
+                name: {
+                    required: true
+                },
+                display_name: {
+                    required: true
+                },
+                level: {
+                    required: true,
+                    digits: true
+                },
+                parent_menu: {
+                    selected: true
+                },
+                order: {
+                    required: true,
+                    digits: true
+                }
+            },
+            messages: {
+                name: {
+                    required: '请填写菜单名'
+                },
+                display_name: {
+                    required: '请填写显示名'
+                },
+                level: {
+                    required: '请填写级别',
+                    digits: '级别必须是数字'
+                },
+                parent_menu: {
+                    selected: '请选择父菜单'
+                },
+                order: {
+                    required: '请填写排序',
+                    digits: '排序必须是数字'
+                }
+            },
+            submitHandler: function (form) {
+                $(form).ajaxSubmit({
+                    dataType: 'JSON',
+                    success: function (resp) {
+                        if (resp.status === 0) {
+                            alert('更新成功');
+                        } else {
+                            alert(resp.msg);
+                        }
+                    },
+                    error: function () {
+                        alert('提交失败');
+                    }
+                });
+            }
+        });
+
+        $.validator.addMethod('selected', function (value, element) {
+            value = $(element).find('option:selected').val();
+            var level = $('input[name=level]').val();
+            if (level === '0' || level === undefined) {
+                return true;
+            } else {
+                return value !== '' && value !== undefined;
+            }
+        });
+    });
 </script>
 {% end %}
