完善添加菜单功能

--- a/et/w_admin/templates/menu_edit.html
+++ b/et/w_admin/templates/menu_edit.html
@@ -136,7 +136,7 @@
                     dataType: 'JSON',
                     success: function (resp) {
                         if (resp.status === 0) {
-                            alert('更新成功');
+                            alert('保存成功');
                         } else {
                             alert(resp.msg);
                         }
