--- a/et/w_admin/templates/menu_list.html
+++ b/et/w_admin/templates/menu_list.html
@@ -6,7 +6,7 @@
 <div class="tools">
 
     <ul class="toolbar">
-        <li class="click"><span><img src="/static/images/t01.png"/></span>添加</li>
+        <li><a href="/menu_edit"><img src="/static/images/t01.png"/>添加</a></li>
         {% if bag.back_url %}
         <li><a href="{{bag.back_url}}"><img src="/static/images/t01.png"/>返回上一级</a></li>
         {% end %}
