修改basehandler的mvc模式,model直接写到render参数里

--- a/et/w_admin/templates/left.html
+++ b/et/w_admin/templates/left.html
@@ -12,7 +12,7 @@
 
 <dl class="leftmenu">
 
-    {% for menu in bag.menus %}
+    {% for menu in model %}
     {% module LeftMenu(menu) %}
     {% end %}
 
