--- a/et/w_admin/templates/permission_edit.html
+++ b/et/w_admin/templates/permission_edit.html
@@ -12,15 +12,15 @@
         <ul class="forminfo">
             <li>
                 <label>权限名</label>
-                <input name="name" type="text" class="dfinput" value="{{ bag.permission.name }}"/>
+                <input name="name" type="text" class="dfinput" value="{{ model.name }}"/>
             </li>
             <li>
                 <label>描述</label>
-                <input name="description" type="text" class="dfinput" value="{{ bag.permission.description }}"/>
+                <input name="description" type="text" class="dfinput" value="{{ model.description }}"/>
             </li>
             <li>
                 <label>排序</label>
-                <input name="order" type="text" class="dfinput" value="{{ bag.permission.order }}"/>
+                <input name="order" type="text" class="dfinput" value="{{ model.order }}"/>
             </li>
             <li>
                 <label>&nbsp;</label>
