--- a/et/w_admin/templates/top.html
+++ b/et/w_admin/templates/top.html
@@ -14,7 +14,7 @@
 </div>
 
 <ul class="nav">
-    {% for menu in bag.menus %}
+    {% for menu in model %}
     {% module TopMenuItem(menu) %}
     {% end %}
 </ul>
