--- a/et/w_admin/templates/menu_list.html
+++ b/et/w_admin/templates/menu_list.html
@@ -33,7 +33,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for menu in bag.menus %}
+    {% for menu in model %}
     <tr>
         <td><input type="checkbox"/></td>
         <td>{{ menu.id }}</td>
