--- a/et/w_admin/templates/permission_list.html
+++ b/et/w_admin/templates/permission_list.html
@@ -26,7 +26,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for permission in bag.permissions %}
+    {% for permission in model %}
     <tr>
         <td><input type="checkbox"/></td>
         <td>{{ permission.id }}</td>
