--- a/et/w_admin/templates/department_edit.html
+++ b/et/w_admin/templates/department_edit.html
@@ -5,7 +5,7 @@
 {% end %}
 
 {% block main %}
-<form id="menu_form" method="post">
+<form id="department_form" method="post">
     <div class="formbody">
         <div class="formtitle"><span>部门编辑</span></div>
 
@@ -18,12 +18,20 @@
                 <label>默认菜单</label>
                 <div class="vocation">
                     <select id="default_menu" name="default_menu">
+                        <option value="-1">
+                            请选择
+                        </option>
                         {% for menu in bag.menus %}
                         <option value="{{ menu.id }}"
                                 {% if menu.id == model.default_top_menu.id %}selected{% end %}>{{ menu.display_name }}</option>
                         {% end %}
                     </select>
                 </div>
+            </li>
+
+            <li>
+                <label>&nbsp;</label>
+                <input type="submit" class="btn" value="确认保存"/>
             </li>
         </ul>
     </div>
@@ -34,76 +42,24 @@
 {% block footer %}
 <script type="text/javascript">
     $(function () {
-        //更改级别重新加载父菜单
-        $('input[name=level]').blur(function () {
-            var self = $(this);
-            var level = self.val();
-            level = parseInt(level) - 1;
-            $.ajax({
-                url: '/load_menus',
-                type: 'GET',
-                data: {
-                    level: level
-                },
-                success: function (resp) {
-                    if (resp.status === 0) {
-                        var parent_menu = $('#parent_menu');
-                        parent_menu.empty();
-                        $('<option>').val('').text('请选择').appendTo(parent_menu);
-                        $.each(resp.data, function (index, item) {
-                            $('<option>').val(item.id).text(item.display_name).appendTo(parent_menu);
-                        });
-                    } else {
-                        alert(resp.msg);
-                    }
-                },
-                error: function () {
-                    alert('加载菜单出错');
-                }
-            });
-        });
-
-
         //表单验证
-        $('#menu_form').validate({
+        $('#department_form').validate({
             errorElement: 'p',
             errorClass: 'valid-error',
             rules: {
                 name: {
                     required: true
                 },
-                display_name: {
-                    required: true
-                },
-                level: {
-                    required: true,
-                    digits: true
-                },
-                parent_menu: {
+                default_menu: {
                     selected: true
-                },
-                order: {
-                    required: true,
-                    digits: true
                 }
             },
             messages: {
                 name: {
-                    required: '请填写菜单名'
+                    required: '请填写部门名称'
                 },
-                display_name: {
-                    required: '请填写显示名'
-                },
-                level: {
-                    required: '请填写级别',
-                    digits: '级别必须是数字'
-                },
-                parent_menu: {
-                    selected: '请选择父菜单'
-                },
-                order: {
-                    required: '请填写排序',
-                    digits: '排序必须是数字'
+                default_menu: {
+                    selected: '请选择默认菜单'
                 }
             },
             submitHandler: function (form) {
@@ -124,13 +80,7 @@
         });
 
         $.validator.addMethod('selected', function (value, element) {
-            value = $(element).find('option:selected').val();
-            var level = $('input[name=level]').val();
-            if (level === '0' || level === undefined) {
-                return true;
-            } else {
-                return value !== '' && value !== undefined;
-            }
+            return this.optional(element) || value != -1;
         });
     });
 </script>
