--- a/et/w_admin/templates/admin_user_list.html
+++ b/et/w_admin/templates/admin_user_list.html
@@ -6,7 +6,7 @@
 <div class="tools">
 
     <ul class="toolbar">
-        <li><a href="/menu_edit"><img src="/static/images/t01.png"/>添加</a></li>
+        <li><a href="/admin_user_edit"><img src="/static/images/t01.png"/>添加</a></li>
     </ul>
 
 </div>
@@ -18,6 +18,12 @@
         <th><input type="checkbox"/></th>
         <th>登录名</th>
         <th>显示名</th>
+        <th>用户类型</th>
+        <th>创建时间</th>
+        <th>更新时间</th>
+        <th>职位</th>
+        <th>部门</th>
+        <th>操作</th>
     </tr>
     </thead>
     <tbody>
@@ -25,8 +31,13 @@
     <tr>
         <td><input type="checkbox"/></td>
         <td>{{ user.user_name }}</td>
-        <td>{{ user.display_name }}
-        </td>
+        <td>{{ user.display_name }}</td>
+        <td>{{ user.user_type }}</td>
+        <td>{{ user.create_datetime }}</td>
+        <td>{{ user.update_datetime }}</td>
+        <td>{{ user.position.name }}</td>
+        <td>{{ user.department.name }}</td>
+        <td><a href="/admin_user_edit/{{ user.user_name }}">编辑</a></td>
     </tr>
     {% end %}
     </tbody>
